Refactored Code. Using REST Endpoints with AJAX

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,7 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en">
 <head>
+    <title> Home Page </title>
     <script>
         window.location.href='/dashboard';
     </script>
